--- a/vs/dosbox.vcxproj
+++ b/vs/dosbox.vcxproj
@@ -487,6 +487,7 @@
     <ClInclude Include="..\src\cpu\core_dyn_x86\dyn_fpu.h" />
     <ClInclude Include="..\src\cpu\core_dyn_x86\dyn_fpu_dh.h" />
     <ClInclude Include="..\src\cpu\core_dyn_x86\helpers.h" />
+    <ClInclude Include="..\src\cpu\core_dyn_x86\risc_x64.h" />
     <ClInclude Include="..\src\cpu\core_dyn_x86\risc_x86.h" />
     <ClInclude Include="..\src\cpu\core_dyn_x86\string.h" />
     <ClInclude Include="..\src\cpu\core_full\ea_lookup.h" />
