--- a/vs/dosbox.vcxproj.filters
+++ b/vs/dosbox.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="..\src\cpu\callback.cpp">
@@ -481,6 +481,9 @@
     <ClCompile Include="..\src\misc\pacer.cpp">
       <Filter>src\misc</Filter>
     </ClCompile>
+    <ClCompile Include="..\submodules\loguru\loguru.cpp">
+      <Filter>submodules\loguru</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\bios.h">
@@ -914,6 +917,9 @@
     </ClInclude>
     <ClInclude Include="..\src\cpu\core_dyn_x86\risc_x64.h">
       <Filter>src\cpu\core_dyn_x86</Filter>
+    </ClInclude>
+    <ClInclude Include="..\submodules\loguru\loguru.hpp">
+      <Filter>submodules\loguru</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
