--- a/vs/dosbox.vcxproj
+++ b/vs/dosbox.vcxproj
@@ -306,9 +306,20 @@
     <ClCompile Include="..\src\dos\drive_overlay.cpp" />
     <ClCompile Include="..\src\dos\drive_virtual.cpp" />
     <ClCompile Include="..\src\dos\program_autotype.cpp" />
+    <ClCompile Include="..\src\dos\program_biostest.cpp" />
+    <ClCompile Include="..\src\dos\program_boot.cpp" />
     <ClCompile Include="..\src\dos\program_choice.cpp" />
     <ClCompile Include="..\src\dos\program_help.cpp" />
+    <ClCompile Include="..\src\dos\program_imgmount.cpp" />
+    <ClCompile Include="..\src\dos\program_intro.cpp" />
+    <ClCompile Include="..\src\dos\program_keyb.cpp" />
+    <ClCompile Include="..\src\dos\program_loadfix.cpp" />
+    <ClCompile Include="..\src\dos\program_loadrom.cpp" />
     <ClCompile Include="..\src\dos\program_ls.cpp" />
+    <ClCompile Include="..\src\dos\program_mem.cpp" />
+    <ClCompile Include="..\src\dos\program_mount_common.cpp" />
+    <ClCompile Include="..\src\dos\program_mount.cpp" />
+    <ClCompile Include="..\src\dos\program_rescan.cpp" />
     <ClCompile Include="..\src\fpu\fpu.cpp" />
     <ClCompile Include="..\src\gui\render.cpp" />
     <ClCompile Include="..\src\gui\render_scalers.cpp" />
