--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -229,9 +229,11 @@ jobs:
         run: |
           arch -arch=${{ matrix.runner.arch }} meson setup \
             --wrap-mode=forcefallback \
-            -Dbuildtype=release \
+            -Ddebug=false \
+            -Db_ndebug=true \
             -Ddefault_library=static \
             -Db_asneeded=true \
+            -Doptimization=s \
             -Db_lto=true \
             -Dtry_static_libs=opusfile,png,sdl2,sdl2_net \
             -Dfluidsynth:enable-floats=true \
@@ -241,13 +243,46 @@ jobs:
       - name: Build
         run:  arch -arch=${{ matrix.runner.arch }} ninja -C build
 
+      - name: Upload binary
+        uses: actions/upload-artifact@v2
+        with:
+          name: dosbox-${{ matrix.runner.arch }}
+          path: build/dosbox
+        
+  publish_universal_build:
+    name: Publish universal build
+    needs: build_macos_release
+    runs-on: macos-latest
+    steps:
+      - name: Checkout repository and submodules
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+
+      - name: Inject version string
+        run: |
+          set -x
+          git fetch --prune --unshallow
+          export VERSION=$(git describe --abbrev=5)
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+
+      - name: Install brew depedencies
+        run: brew install librsvg          
+
+      - name: Download binaries
+        uses: actions/download-artifact@v2
+          
       - name: Package
         run: |
           set -x
 
           # Print shared object dependencies
-          otool -L build/dosbox
-          python3 scripts/verify-macos-dylibs.py build/dosbox
+          otool -L dosbox-arm64/dosbox
+          python3 scripts/verify-macos-dylibs.py dosbox-arm64/dosbox
+          
+          # Create universal binary from both architectures
+          mkdir dosbox-universal
+          lipo dosbox-x86_64/dosbox dosbox-arm64/dosbox -create -output dosbox-universal/dosbox
 
           # Generate icon
           make -C contrib/icons/ dosbox-staging.icns
@@ -258,8 +293,8 @@ jobs:
           install -d "$dst/MacOS/"
           install -d "$dst/Resources/"
           install -d "$dst/SharedSupport/"
-
-          install        "build/dosbox"                      "$dst/MacOS/"
+                    
+          install        "dosbox-universal/dosbox"           "$dst/MacOS/"
           install -m 644 "contrib/macos/Info.plist.template" "$dst/Info.plist"
           install -m 644 "contrib/macos/PkgInfo"             "$dst/PkgInfo"
           install -m 644 "contrib/icons/dosbox-staging.icns" "$dst/Resources/"
@@ -302,7 +337,6 @@ jobs:
               -ov -format UDZO "dosbox-staging-macOS-${{ env.VERSION }}.dmg"
 
       - name:  Install Clam AV
-        if:    matrix.runner.needs_deps
         id:    prep-clamdb
         shell: bash
         run: |
@@ -314,7 +348,6 @@ jobs:
           echo "::set-output name=today::$(date +%F)"
 
       - uses:  actions/cache@v2
-        if:    matrix.runner.needs_deps
         id:    cache-clamdb
         with:
           path: ${{ env.CLAMDB_DIR }}/**/*.cvd
@@ -333,9 +366,9 @@ jobs:
         # GitHub automatically zips the artifacts, and there's no option
         # to skip it or upload a file only.
         with:
-          name: dosbox-staging-macOS-${{ matrix.runner.arch }}
+          name: dosbox-staging-macOS-universal
           path: dosbox-staging-macOS-${{ env.VERSION }}.dmg
-
+    
   # This job exists only to publish an artifact with version info when building
   # from master branch, so snapshot build version will be visible on:
   # https://dosbox-staging.github.io/downloads/devel/
