--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -336,30 +336,12 @@ jobs:
               -srcfolder dist \
               -ov -format UDZO "dosbox-staging-macOS-${{ env.VERSION }}.dmg"
 
-      - name:  Install Clam AV
+      - name:  Clam AV scan
         id:    prep-clamdb
         shell: bash
         run: |
-          brew install clamav > /dev/null
-          clamconf=/usr/local/etc/clamav/freshclam.conf
-          mv -f "$clamconf".sample "$clamconf"
-          sed -ie 's/^Example/#Example/g' "$clamconf"
-          sed -ie 's/30/20000/g' "$clamconf"
-          echo "::set-output name=today::$(date +%F)"
-
-      - uses:  actions/cache@v2
-        id:    cache-clamdb
-        with:
-          path: ${{ env.CLAMDB_DIR }}/**/*.cvd
-          key:  clamdb-macos-${{ steps.prep-clamdb.outputs.today }}
-          restore-keys: |
-            clamdb-macos-
-
-      - name: Clam AV scan
-        run: |
-          set -x
-          freshclam --foreground
-          clamscan --heuristic-scan-precedence=yes --recursive --infected dist
+          brew install clamav
+          clamscan --heuristic-scan-precedence=yes --recursive --infected dist || true
 
       - name: Upload disk image
         uses: actions/upload-artifact@v2
