--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -45,6 +45,7 @@ jobs:
           vcpkg install --triplet ${{ matrix.conf.arch }}-windows libpng sdl2 sdl2-net libmt32emu opusfile fluidsynth gtest
           if (-not $?) { throw "vcpkg failed to install library dependencies" }
           rm -R c:\vcpkg\buildtrees\fluidsynth\src\*.clean\sf2
+          rm -R c:\vcpkg\buildtrees\sdl2\src\*.clean\android-project-ant
 
       - name:  Integrate packages
         shell: pwsh
