Add a generalized PLACEHOLDER program
Can be used as many times as needed to inform users
that a 3rd party program should be acquired and installed.

Any number of programs can be added in `dos_programs`:

 - `PROGRAMS_MakeFile("FAVORITE.COM", PLACEHOLDER_ProgramStart);`
 - `PROGRAMS_MakeFile("OTHRPROG.COM", PLACEHOLDER_ProgramStart);`
 - `PROGRAMS_MakeFile("POPULAR.COM", PLACEHOLDER_ProgramStart);`

And so on.

Calling the placeholder will pause execution and produce a
helpful message both on the DOS console and in the log output:

    Z:\DUMMY.COM: This program is a placeholder
    Z:\DUMMY.COM: Please visit the following wiki article for help:
    Z:\DUMMY.COM: https://github.com/dosbox-staging/dosbox-staging/wiki/Add-Utilities

Co-authored-by: Burrito78 <Burrito78@users.noreply.github.com>
Co-authored-by: kcgen <kcgen@users.noreply.github.com>
Co-authored-by: MasterO2 <MasterO2@users.noreply.github.com>
Co-authored-by: nemo93 <nemo93@users.noreply.github.com>

--- a/vs/dosbox.vcxproj.filters
+++ b/vs/dosbox.vcxproj.filters
@@ -424,6 +424,9 @@
     <ClCompile Include="..\src\dos\program_ls.cpp">
       <Filter>src\dos</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\dos\program_placeholder.cpp">
+      <Filter>src\dos</Filter>
+    </ClCompile>
     <ClCompile Include="..\src\misc\fs_utils_win32.cpp">
       <Filter>src\misc</Filter>
     </ClCompile>
