--- a/vs/dosbox.vcxproj
+++ b/vs/dosbox.vcxproj
@@ -319,6 +319,7 @@
     <ClCompile Include="..\src\dos\program_mem.cpp" />
     <ClCompile Include="..\src\dos\program_mount_common.cpp" />
     <ClCompile Include="..\src\dos\program_mount.cpp" />
+    <ClCompile Include="..\src\dos\program_placeholder.cpp" />
     <ClCompile Include="..\src\dos\program_rescan.cpp" />
     <ClCompile Include="..\src\fpu\fpu.cpp" />
     <ClCompile Include="..\src\gui\render.cpp" />
